changed to index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Price Tiers</title>
     <link rel="stylesheet" href="app.css">
 </head>
+
 <body>
-    
+    <div class="panel pricing-table">
+        <div class="pricing-plan">
+            <img src="resimler/1710350803586.jpg" alt="" class="pricing-img">
+            <h2 class="pricing-header">Personal</h2>
+            <ul class="pricing-features">
+                <li class="pricing-features-item">Custom domains</li>
+                <li class="pricing-features-item">Sleeps after 30 mins of inactivity</li>
+            </ul>
+        </div>
+
+    </div>
 </body>
+
 </html>
