change title to span

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <li class="pricing-features-item">Custom domains</li>
                 <li class="pricing-features-item">Sleeps after 30 mins of inactivity</li>
             </ul>
+            <span class="pricing-price">Free</span>
+            <a href="#/" class="pricing-button">Sign Up</a>
         </div>
 
     </div>
