--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
             <span class="pricing-price">Free</span>
             <a href="#/" class="pricing-button">Sign Up</a>
         </div>
+        
+        <div class="pricing-plan">
+            <img src="resimler/kucuk.jpg" alt="" class="pricing-img">
+            <h2 class="pricing-header">Small team</h2>
+            <ul class="pricing-features">
+                <li class="pricing-features-item">Never sleeps</li>
+                <li class="pricing-features-item">Multiple workers for more powerfull apps</li>
+            </ul>
+            <span class="pricing-price">$150</span>
+            <a href="#/" class="pricing-button is-featured">Free trial</a>
+        </div>
+
+        <div class="pricing-plan"></div>
+        <img src="resimler/buyuk.jpg" alt="" class="pricing-img">
+        <h2 class="pricing-header">Enterprice</h2>
+        <ul class="pricing-features">
+            <li class="pricing-features-item">Dedicated</li>
+            <li class="pricing-features-item">Simple horizontal scalabilited</li>
+        </ul>
+        <span class="pricing-price">$400</span>
+        <a href="#/" class="pricing-button">Free trial</a>
 
     </div>
 </body>
